--- a/app/src/main/res/navigation/nav_graph2.xml
+++ b/app/src/main/res/navigation/nav_graph2.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/First2Fragment"
         android:name="com.example.notekeeper.First2Fragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_first2">
 
         <action
